[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/startGameButton.png" type="Texture" id=1]
[ext_resource path="res://scripts/StartGameButton.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/lux_sprite.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/author.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Muli.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sprites/upArrow.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/downArrow.png" type="Texture" id=7]
[ext_resource path="res://scenes/OverlayTransition.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "pulse"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5, 2.25, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 0.8, 0.8 ), Vector2( 0.75, 0.75 ), Vector2( 0.7, 0.7 ), Vector2( 0.75, 0.75 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[node name="MainMenu" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="TextureButton" parent="."]
margin_left = 632.975
margin_top = 259.681
margin_right = 832.975
margin_bottom = 459.681
rect_scale = Vector2( 0.73, 0.73 )
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameAnimationPlayer" type="AnimationPlayer" parent="StartGameButton"]
autoplay = "pulse"
anims/pulse = SubResource( 1 )

[node name="OverlayTransition" parent="StartGameButton" instance=ExtResource( 9 )]
position = Vector2( -490.161, -136.348 )

[node name="GameLogo" type="TextureRect" parent="."]
margin_left = 107.757
margin_top = 50.3506
margin_right = 907.757
margin_bottom = 570.351
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthorLogo" type="TextureRect" parent="."]
margin_left = 900.0
margin_top = 535.0
margin_right = 1100.0
margin_bottom = 635.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsView" type="Node2D" parent="."]
position = Vector2( 147.698, 140.794 )
scale = Vector2( 0.75, 0.75 )

[node name="ControlsHeader" type="Label" parent="ControlsView"]
margin_left = 181.428
margin_top = 264.956
margin_right = 439.428
margin_bottom = 359.956
rect_scale = Vector2( 0.742682, 0.728304 )
custom_fonts/font = SubResource( 2 )
text = "Controls"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Node2D" parent="ControlsView"]
position = Vector2( 131.754, 360.34 )

[node name="UpKeySymbol" type="TextureRect" parent="ControlsView/Up"]
margin_right = 200.0
margin_bottom = 200.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpKeyExplaination" type="Label" parent="ControlsView/Up"]
margin_left = 89.0899
margin_top = -20.4907
margin_right = 518.09
margin_bottom = 172.509
rect_scale = Vector2( 0.44896, 0.474313 )
custom_fonts/font = SubResource( 3 )
text = "Move Paddles
upwards"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Node2D" parent="ControlsView"]
position = Vector2( 132.595, 472.389 )

[node name="DownKey" type="TextureRect" parent="ControlsView/Down"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownKeyExplaination" type="Label" parent="ControlsView/Down"]
margin_left = 87.3785
margin_top = -10.9812
margin_right = 516.379
margin_bottom = 182.019
rect_scale = Vector2( 0.458074, 0.454399 )
custom_fonts/font = SubResource( 4 )
text = "Move Paddles
downwards"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGameButton" to="StartGameButton" method="_on_StartGameButton_pressed"]
